@@ -1,3 +1,8 @@
+2007-10-16  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: no more "configuration changed"
+	warning, http://bugzilla.gnome.org/show_bug.cgi?id=358048
+
 2007-10-08  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-settings-keyboard-xkb.c: dropping unneeded dbus server
